@@ -1,8 +1,11 @@
 2006-01-23  Sven Panne  <sven.panne@aedion.de>
 
-	* src/alc/alc_context.c(_alcSetContext): Fixed debug message.
+	* src/alc/alc_context.c (_alcSetContext, _alcInitContext): Initialize
+	speaker positions when the number of speakers is known, not earlier...
 
-	* src/al_rcvar.c(rc_lookup): Don't complain a second time,
+	* src/alc/alc_context.c (_alcSetContext): Fixed debug message.
+
+	* src/al_rcvar.c (rc_lookup): Don't complain a second time,
 	_alGlobalBinding already did it.
 
 2006-01-20  Sven Panne  <sven.panne@aedion.de>
